made dark and light aligned elements in header made input

--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -21,7 +21,7 @@ body {
 }
 
 .page-wrapper {
-    flex-grow: 1;
+    padding: var(--header-height) 0 0 0;
 }
 
 .sb-show-main[data-preview*='my-story-id'] {
