--- a/src/app/styles/theme/dark.scss
+++ b/src/app/styles/theme/dark.scss
@@ -7,4 +7,6 @@
     --primary-color: #ffffff;
     --icon-social-color: #d7dddf;
     --icon-bg-color: #ebeff1;
+    --header-shadow: 0px 0px 14px 0px rgba(229, 237, 241, 0.07);
+    --input-shadow: 0px 0px 44px 0px rgba(229, 237, 241, 0.07);
 }
