--- a/src/app/styles/theme/light.scss
+++ b/src/app/styles/theme/light.scss
@@ -1,9 +1,11 @@
 :root[data-theme='light'] {
-    --bg-color: #edf1f3;
+    --bg-color: #fff;
     --accent-color: #72aec8;
     --hover-color: #aee3fa;
     --p-color: #3a3a3a;
     --primary-color: #272727;
     --icon-social-color: #d7dddf;
     --icon-bg-color: #ebeff1;
+    --header-shadow: 0px 0px 14px 0px rgba(11, 40, 53, 0.07);
+    --input-shadow: 0px 0px 44px 0px rgba(0, 0, 0, 0.08);
 }
