--- a/src/widgets/ui/Header/ui/Header.module.scss
+++ b/src/widgets/ui/Header/ui/Header.module.scss
@@ -1,10 +1,19 @@
 .Header {
     display: flex;
     align-items: center;
-    padding: 0 10px;
+    justify-content: space-between;
     width: 100%;
-    height: var(--nav-bar-height);
-    background-color: var(--inverted-bg-color);
+    height: var(--header-height);
+    background: var(--bg-color);
+    box-shadow: var(--header-shadow);
+    position: fixed;
+    inset: 0;
+}
+
+.wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .icon {
@@ -13,4 +22,10 @@
 
 .right {
     margin-left: auto;
+}
+
+.logo {
+    font-family: 'Jost', sans-serif;
+    font-size: var(--font-size-logo);
+    font-weight: 400;
 }
