added blanks for the basket in the header and for user registration added an input for searching for products

--- a/src/app/styles/theme/dark.scss
+++ b/src/app/styles/theme/dark.scss
@@ -5,6 +5,7 @@
     --hover-color: #aee3fa;
     --p-color: #c3b1b1;
     --primary-color: #ffffff;
+    --inverted-primary-color: #383939;
     --icon-social-color: #d7dddf;
     --icon-bg-color: #ebeff1;
     --header-shadow: 0px 0px 14px 0px rgba(229, 237, 241, 0.07);
