--- a/src/app/styles/theme/light.scss
+++ b/src/app/styles/theme/light.scss
@@ -4,6 +4,7 @@
     --hover-color: #aee3fa;
     --p-color: #3a3a3a;
     --primary-color: #272727;
+    --inverted-primary-color: #fff;
     --icon-social-color: #d7dddf;
     --icon-bg-color: #ebeff1;
     --header-shadow: 0px 0px 14px 0px rgba(11, 40, 53, 0.07);
