--- a/src/shared/ui/Button/ui/MyButton.module.scss
+++ b/src/shared/ui/Button/ui/MyButton.module.scss
@@ -22,7 +22,7 @@
 
 .background {
     outline: none;
-    color: var(--inverted-primary-color);
+    color: var(--primary-color);
     background-color: var(--inverted-bg-color);
 }
 
