made the user model redesigned the loader partially made the logging form

--- a/src/app/styles/theme/dark.scss
+++ b/src/app/styles/theme/dark.scss
@@ -10,4 +10,5 @@
     --icon-bg-color: #ebeff1;
     --header-shadow: 0px 0px 14px 0px rgba(229, 237, 241, 0.07);
     --input-shadow: 0px 0px 44px 0px rgba(229, 237, 241, 0.07);
+    --inverted-color-rgba: rgba(255, 108, 29, 0.08);
 }
