--- a/src/app/styles/theme/light.scss
+++ b/src/app/styles/theme/light.scss
@@ -9,4 +9,5 @@
     --icon-bg-color: #ebeff1;
     --header-shadow: 0px 0px 14px 0px rgba(11, 40, 53, 0.07);
     --input-shadow: 0px 0px 44px 0px rgba(0, 0, 0, 0.08);
+    --inverted-color-rgba: rgba(10, 108, 154, 0.08);
 }
