--- a/src/shared/ui/MyInput/ui/MyInput.module.scss
+++ b/src/shared/ui/MyInput/ui/MyInput.module.scss
@@ -9,10 +9,25 @@
     .ant-btn > div > div {
         color: var(--primary-color);
     }
+
     .ant-btn {
         border: none;
     }
+
+    .ant-input-wrapper,
+    .ant-input-affix-wrapper {
+        height: 100%;
+    }
 }
+
+.name,
+.password {
+    width: 100%;
+    height: 100%;
+    span > span:nth-child(2) > button {
+         display: none !important;
+    }
+ }
 
 .search {
     border: 1px solid #EEE;
@@ -102,13 +117,18 @@
 }
 
 .size_m {
-    max-width: 290px;
-    height: 53px;
+    max-width: 100%;
+    height: 45px;
 }
 
 .size_l {
-    width: 494px;
+    max-width: 290px;
     height: 53px;
     font-size: 20px;
 }
 
+.size_xl {
+    width: 494px;
+    height: 53px;
+    font-size: 20px;
+}
