--- a/src/shared/ui/CustomButton/ui/CustomButton.module.scss
+++ b/src/shared/ui/CustomButton/ui/CustomButton.module.scss
@@ -1,7 +1,7 @@
 .button {
     cursor: pointer;
 
-    align-self: flex-start;
+    // align-self: flex-start;
 
     width: auto;
     max-height: 53px;
