made the Typography component

--- a/src/widgets/ui/Header/ui/NavBar/ui/NavBar.module.scss
+++ b/src/widgets/ui/Header/ui/NavBar/ui/NavBar.module.scss
@@ -16,7 +16,7 @@
     margin: 0;
     padding: 0;
 
-    color: var(--primary-color);
+    color: unset;
     list-style: none;
 
     transition: color .3s;
