--- a/src/widgets/ui/SwitcherTheme/ui/SwitcherTheme.module.scss
+++ b/src/widgets/ui/SwitcherTheme/ui/SwitcherTheme.module.scss
@@ -6,13 +6,13 @@
 .svg {
     width: 30px;
     height: 30px;
+    color: var(--primary-color);
     transition: all .3s;
 }
 
-.moon {
-    color: #171716;
-}
+// .moon {
+//     color: #171716;
+// }
 
-.sunny {
-    color: var(--primary-color);
-}
+// .sunny {
+// }
