--- a/src/app/styles/variables/_global.scss
+++ b/src/app/styles/variables/_global.scss
@@ -1,59 +1,73 @@
 :root {
-    /*
-	* size m
-    */
-    --font-size-m: 16px;
-    --line-hight-m: 24px;
+    // ? SIZE M
+    --font-size-m: 1rem;
+    --line-hight-m: 1.5rem;
     --font-family: 'Lato', sans-serif;
     --font-m: var(--font-size-m) / var(--line-hight-m) var(--font-family);
 
-    /*
-    * size l
-	*/
-    --font-size-l: 20px;
-    --line-hight-l: 28px;
+    // ? SIZE L
+    --font-size-l: 1.25rem;
+    --line-hight-l: 1.75rem;
     /* stylelint-disable-next-line */
     --font-family: 'Jost', sans-serif;
     --font-l: var(--font-size-l) / var(--line-hight-l) var(--font-family);
 
-    /*
-    * size xl
-	*/
-    --font-size-xl: 30px;
-    --line-hight-xl: 38px;
+    // ? SIZE XL
+    --font-size-xl: 1.87rem;
+    --line-hight-xl: 2.37rem;
     /* stylelint-disable-next-line */
     --font-family: 'Jost', sans-serif;
     --font-xl: var(--font-size-xl) / var(--line-hight-xl) var(--font-family);
 
-    /*
-    * font-family
-    */
+    // ? FONT FAMILY
     /* stylelint-disable-next-line */
     --font-family: 'Jost', sans-serif;
 
-    /*
-    *logo
-    */
+    // ? FONT SIZE
     --font-size-logo: 2.063rem;
+    --font-size-h2: 5rem;
+    --font-size-h3: 1.25rem;
 
-    /*
-    * size nav-bar
-	*/
+    // ? SIZE NAV-BAR
     --header-height: 4.5rem;
 
-    /*
-    *  z-index
-	*/
-    --header-index: 2;
-    --modal-index: 5;
+    // ? Z-INDEX
+    --header-z-index: 2;
+    --modal-z-index: 5;
 
-    /*
-    *  color
-	*/
+    // ? LINE HEIGHT
+    --line-height-h2: 114%;
+
+    // ? COLOR
     --overlay-color: rgba(0 0 0 / 60%);
 
-    /*
-    * time
-    */
+    // ? TIME
     --delay: .3s;
+
+    
+    // ? MEDIA
+    @media screen and ( width <= 1400px ) {
+        --font-size-h2: 4rem;
+        --line-height-h2: 100%;
+        --font-size-h3: 1.25rem;
+    }
+    
+    @media screen and ( width <= 992px ) {
+        --font-size-h2: 4rem;
+        --font-size-h3: 1rem;
+        --header-height: 4rem;
+    }
+    
+    @media screen and ( width <= 768px ) {
+        --font-size-h2: 3rem;
+        --font-size-h3: .9rem;
+        --header-height: 3rem;
+    }
+    
+    @media screen and ( width <= 576px ) {
+        --font-size-logo: 1.8rem;
+        --font-size-h2: 2.5rem;
+        --line-height-h2: 90%;
+        --font-size-h3: .8rem;
+    }
 }
