--- a/src/widgets/ui/Header/ui/Header.module.scss
+++ b/src/widgets/ui/Header/ui/Header.module.scss
@@ -1,14 +1,16 @@
 .header {
     position: fixed;
-    z-index: var(--header-index);
-    inset: 0;
+    z-index: var(--header-z-index);
+    top: 0;
+    bottom: 0;
+    left: 0;
 
     display: flex;
     align-items: center;
-    justify-content: space-between;
-
+    
     width: 100%;
     height: var(--header-height);
+    padding: 18px 0;
 
     background: var(--bg-color);
     box-shadow: var(--header-shadow);
@@ -21,10 +23,6 @@
 }
 
 :global {
-    .ant-typography {
-        color: var(--primary-color);
-    }
-
     .ant-switch {
         width: 33px;
         height: 34px;
@@ -90,25 +88,6 @@
     align-items: center;
     justify-content: center;
     min-height: 100%;
-}
-
-.logo {
-    font-family: Jost, sans-serif;
-    font-size: var(--font-size-logo);
-    font-weight: 400;
-    color: var(--primary-color);
-
-    @media screen and ( width <= 1200px ) {
-        --font-size-logo: 1.8rem;
-    }
-
-    @media screen and ( width <= 768px ) {
-        --font-size-logo: 1.5rem;
-    }
-
-    @media screen and ( width <= 576px ) {
-        --font-size-logo: 1rem;
-    }
 }
 
 .avatar {
