--- a/src/app/styles/variables/_global.scss
+++ b/src/app/styles/variables/_global.scss
@@ -1,25 +1,25 @@
 :root {
-    // ? SIZE M
+    // * SIZE M
     --font-size-m: 1rem;
     --line-hight-m: 1.5rem;
     --font-family: 'Lato', sans-serif;
     --font-m: var(--font-size-m) / var(--line-hight-m) var(--font-family);
 
-    // ? SIZE L
+    // * SIZE L
     --font-size-l: 1.25rem;
     --line-hight-l: 1.75rem;
     /* stylelint-disable-next-line */
     --font-family: 'Jost', sans-serif;
     --font-l: var(--font-size-l) / var(--line-hight-l) var(--font-family);
 
-    // ? SIZE XL
+    // * SIZE XL
     --font-size-xl: 1.87rem;
     --line-hight-xl: 2.37rem;
     /* stylelint-disable-next-line */
     --font-family: 'Jost', sans-serif;
     --font-xl: var(--font-size-xl) / var(--line-hight-xl) var(--font-family);
 
-    // ? FONT FAMILY
+    // * FONT FAMILY
     /* stylelint-disable-next-line */
     --font-family: 'Jost', sans-serif;
 
@@ -39,12 +39,11 @@
     --line-height-h2: 114%;
 
     // ? COLOR
-    --overlay-color: rgba(0 0 0 / 60%);
+    --overlay-color: rgba(0 0 0 / 90%);
 
     // ? TIME
     --delay: .3s;
 
-    
     // ? MEDIA
     @media screen and ( width <= 1400px ) {
         --font-size-h2: 4rem;
