--- a/src/shared/ui/InputForm/ui/InputForm.module.scss
+++ b/src/shared/ui/InputForm/ui/InputForm.module.scss
@@ -11,7 +11,7 @@
     letter-spacing: 0.48px;
 }
 
-.inputForm{
+.inputForm {
     height: 100%;
     border: 1px solid var(--inverted-bg-color);
 
@@ -26,24 +26,33 @@
         }
     }
 
-    
+    & > span:nth-child(1) svg {
+        display: flex;
+        align-items: center;
+        color: #000;
+    }
+}
+
+
+.size_m {
+    width: 290px;
+    height: 50px;
 }
 
 .size_l {
     width: 640px;
-    height: 75px;
-}
-
-.size_m {
-    width: 310px;
-    height: 75px;
+    height: 62px;
 }
 
 :global {
     [data-icon="close-circle"] {
         width: .7rem;
         height: .7rem;
-        color: #f4a4a4
+        color: #4f2525
+    }
+
+    .css-dev-only-do-not-override-fpg3f5.ant-input-affix-wrapper .anticon.ant-input-password-icon svg {
+        color: #272424
     }
 }
 
