--- a/src/widgets/ui/Header/ui/Header.module.scss
+++ b/src/widgets/ui/Header/ui/Header.module.scss
@@ -70,8 +70,8 @@
 }
 
 .icon {
-    width: 186%;
-    height: 103%;
+    width: 30px;
+    height: 30px;
 
     path {
         fill: var(--primary-color);
