--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -7,8 +7,7 @@
 @import './fonts';
 
 body {
-    font: var(--font-m);
-    font-weight: 400;
+    font: var(--font-m-lato);
     color: var(--primary-color);
     background-color: var(--bg-color);
 }
@@ -19,10 +18,12 @@ body {
 
 .page-content {
     display: flex;
+    min-height: 100vh;
 }
 
 .page-wrapper {
-    padding: var(--header-height) 0 0 0;
+    min-height: 100%;
+    padding: calc(var(--header-height) + 1rem) 0 0 0;
 }
 
 .sb-show-main[data-preview*='my-story-id'] {
