--- a/src/app/styles/variables/_global.scss
+++ b/src/app/styles/variables/_global.scss
@@ -1,72 +1,87 @@
 :root {
-    // * SIZE M
-    --font-size-m: 1rem;
-    --line-hight-m: 1.5rem;
-    --font-family: 'Lato', sans-serif;
-    --font-m: var(--font-size-m) / var(--line-hight-m) var(--font-family);
+    // * SIZE M Lato
+    --font-size-m-lato: 1rem;
+    --line-hight-m-lato: 0.9rem;
+    --font-family-m-lato: 'Lato', sans-serif;
+    --font-m-lato: 400 var(--font-size-m-lato) / var(--line-hight-m-lato) var(--font-family-m-lato);
 
-    // * SIZE L
-    --font-size-l: 1.25rem;
-    --line-hight-l: 1.75rem;
-    /* stylelint-disable-next-line */
-    --font-family: 'Jost', sans-serif;
-    --font-l: var(--font-size-l) / var(--line-hight-l) var(--font-family);
+    // * SIZE L Lato
+    --font-size-l-lato: 1.125rem;
+    --line-hight-l-lato: 0.9rem;
+    --font-family-l-lato: 'Lato', sans-serif;
+    --font-l-lato: 400 var(--font-size-l-lato) / var(--line-hight-l-lato) var(--font-family-l-lato);
 
-    // * SIZE XL
-    --font-size-xl: 1.87rem;
-    --line-hight-xl: 2.37rem;
+    // * SIZE XL Lato
+    --font-size-xl-lato: 2.125rem;
+    --line-hight-xl-lato: 1.6rem;
+    --font-family-xl-lato: 'Lato', sans-serif;
+    --font-xl-lato: 400 var(--font-size-xl-lato) / var(--line-hight-xl-lato) var(--font-family-xl-lato);
+
+    // * SIZE M Jost
+    --font-size-m-jost: 1.25rem;
+    --line-hight-m-jost: 1rem;
     /* stylelint-disable-next-line */
-    --font-family: 'Jost', sans-serif;
-    --font-xl: var(--font-size-xl) / var(--line-hight-xl) var(--font-family);
+    --font-family-m-jost: 'Jost', sans-serif;
+    --font-m-jost: var(--font-size-m-jost) / var(--line-hight-m-jost) var(--font-family-m-jost);
+
+    // * SIZE L Jost
+    --font-size-l-jost: 2.063rem;
+    --line-hight-l-jost: 1rem;
+    /* stylelint-disable-next-line */
+    --font-family-l-jost: 'Jost', sans-serif;
+    --font-l-jost: var(--font-size-l-jost) / var(--line-hight-l-jost) var(--font-family-l-jost);
+
+    // * SIZE XL Jost
+    --font-size-xl-jost: 5rem;
+    --line-hight-xl-jost: 1rem;
+    /* stylelint-disable-next-line */
+    --font-family--xl-jost: 'Jost', sans-serif;
+    --font-xl-jost: var(--font-size-xl-jost) / var(--line-hight-xl-jost) var(--font-family-xl-jost);
 
     // * FONT FAMILY
     /* stylelint-disable-next-line */
-    --font-family: 'Jost', sans-serif;
+    --font-family-Jost: 'Jost', sans-serif;
+     /* stylelint-disable-next-line */
+    --font-family-Lato: 'Lato', sans-serif;
 
-    // ? FONT SIZE
-    --font-size-logo: 2.063rem;
-    --font-size-h2: 5rem;
-    --font-size-h3: 1.25rem;
-
-    // ? SIZE NAV-BAR
+    // * HEADER HEIGHT
     --header-height: 4.5rem;
 
-    // ? Z-INDEX
+    // * Z-INDEX
     --header-z-index: 2;
     --modal-z-index: 5;
 
-    // ? LINE HEIGHT
-    --line-height-h2: 114%;
+    // * OVERLAY COLOR
+    /* stylelint-disable-next-line */
+    --overlay-color: rgba(0, 0, 0, 0.9);
 
-    // ? COLOR
-    --overlay-color: rgba(0 0 0 / 90%);
-
-    // ? TIME
+    // * TIME
     --delay: .3s;
 
-    // ? MEDIA
+    // * MEDIA
     @media screen and ( width <= 1400px ) {
-        --font-size-h2: 4rem;
-        --line-height-h2: 100%;
-        --font-size-h3: 1.25rem;
+        --header-height: 4.5rem;
     }
     
     @media screen and ( width <= 992px ) {
-        --font-size-h2: 4rem;
-        --font-size-h3: 1rem;
+        --font-size-xl-lato: 2rem;
+        --font-size-l-jost: 2rem;
+        --font-size-xl-jost: 4rem;
+        --font-size-m-jost: 1rem;
         --header-height: 4rem;
     }
     
     @media screen and ( width <= 768px ) {
-        --font-size-h2: 3rem;
-        --font-size-h3: .9rem;
+        --font-size-xl-lato: 1.6rem;
+        --font-size-l-jost: 1.8rem;
+        --font-size-xl-jost: 3rem;
+        --font-size-m-jost: .9rem;
         --header-height: 3rem;
     }
     
     @media screen and ( width <= 576px ) {
-        --font-size-logo: 1.8rem;
-        --font-size-h2: 2.5rem;
-        --line-height-h2: 90%;
-        --font-size-h3: .8rem;
+        --font-size-l-jost: 1.5rem;
+        --font-size-xl-jost: 2.5rem;
+        --font-size-m-jost: .8rem;
     }
 }
