--- a/src/pages/MainPage/ui/MainPage.module.scss
+++ b/src/pages/MainPage/ui/MainPage.module.scss
@@ -2,5 +2,6 @@
     // position: relative;
     // display: flex;
     // flex-direction: column;
+    min-height: 100vh;
     color: var(--primary-color);
 }
