--- a/src/app/styles/variables/_global.scss
+++ b/src/app/styles/variables/_global.scss
@@ -56,7 +56,8 @@
     --overlay-color: rgba(0, 0, 0, 0.9);
 
     // * TIME
-    --delay: .3s;
+    --delay-transition: .3s;
+    --delay-animation: .5s;
 
     // * MEDIA
     @media screen and ( width <= 1400px ) {
