--- a/src/app/styles/theme/_dark.scss
+++ b/src/app/styles/theme/_dark.scss
@@ -16,7 +16,7 @@
     inset 0 0 3px rgb(255 255 255 / 50%);
     --secondary-button-hover: rgb(206 205 205) linear-gradient(rgb(230 229 229), rgb(213 212 212) 80%);
     --secondary-button-active: rgb(244 196 162) linear-gradient(rgb(209 209 209) 20%, rgb(255 255 255));
-    --secondary-button-active-shadow: 0 2px rgb(201 197 194),
+    --secondary-button-shadow-active: 0 2px rgb(201 197 194),
     0 1px 6px rgba(171 171 171 / 40%),
     inset 0 1px rgba(255 250 250 / 30%),
     inset 0 0 3px rgba(184 184 184 / 50%);
@@ -33,10 +33,18 @@
     inset 0 0 3px rgb(255 255 255 / 50%);
 
     // * BUTTON SQARE
-    --sqare-bg-color: #464444 linear-gradient(#423d3d, #312a2a);
-    --sqare-shadow-color: 0 0 0 1px #e9e2e2 inset, 0 0 1px #eae8e8;
-    --sqare-shadow-color-active: 0 0 0 1px #ececec inset, 0 1px 2px rgba(176 158 158 / 50%) inset, 0 1px 2px #e2cece;
+    --sqare-button-bg: #464444 linear-gradient(#423d3d, #312a2a);
+    --sqare-button-shadow: 0 0 0 1px #e9e2e2 inset, 0 0 1px #eae8e8;
+    --sqare-button-shadow-active: 0 0 0 1px #ececec inset, 0 1px 2px rgba(176 158 158 / 50%) inset, 0 1px 2px #e2cece;
 
+    // * BUTTON SUBMIT
+    --submit-button-bg: rgb(255 212 3) linear-gradient(rgb(255 212 3), rgb(248 157 23));
+    --submit-button-border: 1px solid rgb(250 172 17);
+    --submit-button-shadow: inset 0 -2px 1px rgba(0 0 0), inset 0 1px 2px rgb(0 0 0 / 0%), inset 0 0 0 60px rgb(255 255 0 / 0%);
+    --submit-button-shadow-hover: inset 0 -1px 1px rgba(0 0 0), inset 0 1px 2px rgba(0 0 0), inset 0 0 0 60px rgb(255 255 0 / 50%);
+    --submit-button-shadow-active: inset 0 -1px 1px rgba(0 0 0 / 10%), inset 0 1px 2px rgb(0 0 0 / 30%), inset 0 0 0 60px rgb(255 255 0 / 45%);
+    --submit-button-border-active: rgba(177 159 10%);
+    
     // * BACKROUND COLOR
     --bg-color: #383939;
     --inverted-bg-color: #efe6e6;
@@ -48,6 +56,6 @@
     --input-shadow: 0px 0px 44px 0px rgb(229 237 241 / 7%);
 
     // * HOVER
-    --primary-hover-color: #aee3fa;
-    --secondary-hover-color: #2b2b2b;
+    --primary-hover: #aee3fa;
+    --secondary-hover: #2b2b2b;
 }
