--- a/src/features/AuthByUserName/ui/LoginForm/LoginForm.module.scss
+++ b/src/features/AuthByUserName/ui/LoginForm/LoginForm.module.scss
@@ -1,5 +1,9 @@
 .loginForm {
     padding: 15px 0;
+
+    @media screen and ( width <= 768px ) {
+        padding: 0;
+    }
 }
 
 :global {
@@ -12,4 +16,8 @@
 .input {
     width: 100%;
     margin-bottom: 20px;
+
+    @media screen and ( width <= 768px ) {
+        margin-bottom: 5px;
+    }
 }
