--- a/src/shared/ui/InputForm/ui/InputForm.module.scss
+++ b/src/shared/ui/InputForm/ui/InputForm.module.scss
@@ -37,6 +37,24 @@
 .size_m {
     width: 290px;
     height: 50px;
+
+    @media screen and ( width <= 992px ) {
+        min-width: 100%;
+        height: 40px;
+    }
+    
+    @media screen and ( width <= 768px ) {
+        max-width: 70%;
+    }
+    
+    @media (orientation: landscape) and ( width <= 768px ) {
+        max-width: 80%;
+    }
+
+      
+    @media screen and ( width <= 576px ) {
+        max-width: 90%;
+    }
 }
 
 .size_l {
