--- a/src/shared/ui/Modal/ui/Modal.module.scss
+++ b/src/shared/ui/Modal/ui/Modal.module.scss
@@ -31,17 +31,40 @@
     transform: scale(0.5);
 
     overflow-x: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 
-    min-width: 30%;
+    min-width: 20%;
     max-width: 30%;
-    min-height: 30%;
-    max-height: 50%;
+    min-height: 170px;
+    max-height: 300px;
     padding: 10px 20px;
 
     background: var(--bg-color);
     border-radius: 10px;
 
     transition: transform 0.6s;
+
+    @media screen and ( width <= 992px ) {
+        min-width: 20%;
+        max-width: 50%;
+    }
+    
+    @media screen and ( width <= 768px ) {
+        max-width: 70%;
+        max-height: 20%;
+        padding: 10px;
+    }
+
+    @media (orientation: landscape) and ( width <= 992px ) {
+        min-height: 30%;
+        max-height: 60%;
+    }
+    
+    @media screen and ( width <= 576px ) {
+        max-width: 90%;
+    }
 }
 
 .opened {
